# cpp-experiments

./: CMakeLists.txt  README.md  main.cpp
2_1/: expFor.cpp  expFor.h  expIf.cpp  expIf.h  expStruct.cpp  expStruct.h  expSwitch.cpp  expSwitch.h  expWhile.cpp  expWhile.h  experimentsVar.cpp  experimentsVar.h
